<resources>
    <string name="app_name">DigitalArt</string>
    <string name="loading">Пожалуйста подождите...</string>
    <string name="health">Health</string>
    <string name="signin">Sign in</string>
    <string name="name">Alicia Scott</string>
    <string name="date">Today 03:14PM </string>
    <string name="empty_list">oops, List is empty.</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"
    </string>
    <string name="svg_triangle">
M0,0 L0,24 12,12 0,0 M12,0 L12,0 12,0 12,0
  </string>
    <string name="svg_pause">
M0,0 L0,24 1,24 1,0 M12,0 L12,24 13,24 13,0
  </string>
    <string name="action_settings">Settings</string>
    <string name="not_clicked">not_clicked</string>
    <string name="clicked">clicked</string>
    <string name="nav_item_qr">Сканировать QR</string>
    <string name="nav_item_main">Каталог</string>
    <string name="nav_item_settings">Настройки</string>
    <string name="nav_item_about">О приложении</string>
    <string name="start">Начать</string>
    <string name="start_kk">Бастау</string>
    <string name="start_en">Start</string>
    <string name="catalog">Каталог</string>
    <string name="about_description">1. Мобильное приложение "Digital Art" является аудиогидом по экспонатам Музея, что позволит услышать истории по экспонатам, особенностях их создания.
        \n
        \n
        2. Приложение будет полезно как просто интересующимся живописью, историей, так и людям продвинутым в данной сфере, например учащимся художественных учебных заведений. Вы погрузитесь в удивительный мир живописи и историй.
        \n
        \n
        3. Основные возможности мобильного приложения:
        \n
        \n
        - экспонаты с полным описанием, фотографиями и озвучкой на русском и казахском языке
        \n
        - просмотр экспонатов как находясь в музее, так и не выходя из дома
        \n
        - поиск по экспонатам
        \n
        - экскурсия по музею не вставая из кресла
    </string>
    <string name="language_selection">Выбор языка</string>
    <string name="liked">Понравившиеся</string>
    <string name="about_app">О приложении</string>
    <string name="overview">Обзор</string>
    <string name="exhibits">Экспонаты</string>
    <string name="find_exhibit">Найти экспонат</string>
    <string name="point_camera_at_exhibit">Наведите камеру на экспонат,
        \n
        чтобы отсканировать QR-код</string>
    <string name="popular">Популярное</string>
    <string name="russian">Русский</string>
    <string name="kazakh">Қазақша</string>
    <string name="english">English</string>
</resources>
