<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_item_main">
    <fragment
        android:id="@+id/nav_item_qr"
        android:name="kz.digitalart.app.ui.qr.QrFragment"
        android:label="@string/nav_item_qr"
        tools:layout="@layout/fragment_qr">

        <argument
            android:name="title"
            android:defaultValue="@string/nav_item_qr" />

        <action
            android:id="@+id/action_fragment_qr_to_fragment_liked_details"
            app:destination="@id/fragment_home_details" />

    </fragment>

    <fragment
        android:id="@+id/nav_item_main"
        android:name="kz.digitalart.app.ui.home.HomeFragment"
        android:label="@string/nav_item_main"
        tools:layout="@layout/fragment_home">

        <argument
            android:name="title"
            android:defaultValue="@string/nav_item_main" />

        <action
            android:id="@+id/action_nav_item_main_to_fragment_home_details"
            app:destination="@id/fragment_home_details" />

    </fragment>

    <fragment
        android:id="@+id/fragment_home_details"
        android:name="kz.digitalart.app.ui.home.details.HomeDetailsFragment"
        android:label="@string/overview"
        tools:layout="@layout/fragment_home_details">

        <argument
            android:name="title"
            android:defaultValue="@string/overview" />

        <argument
            android:name="exhibit"
            android:defaultValue="@null"
            app:argType="kz.digitalart.app.domain.model.Exhibit"
            app:nullable="true" />

    </fragment>

    <fragment
        android:id="@+id/nav_item_settings"
        android:name="kz.digitalart.app.ui.settings.SettingsFragment"
        android:label="@string/nav_item_settings"
        tools:layout="@layout/fragment_settings">
        <argument
            android:name="title"
            android:defaultValue="@string/nav_item_settings" />
        <action
            android:id="@+id/action_nav_item_settings_to_nav_item_about"
            app:destination="@id/nav_item_about" />
        <action
            android:id="@+id/action_nav_item_settings_to_fragment_liked"
            app:destination="@id/fragment_liked" />
    </fragment>

    <fragment
        android:id="@+id/nav_item_about"
        android:name="kz.digitalart.app.ui.about.AboutFragment"
        android:label="@string/nav_item_about"
        tools:layout="@layout/fragment_about">

        <argument
            android:name="title"
            android:defaultValue="@string/nav_item_about"
            app:argType="reference" />

    </fragment>

    <fragment
        android:id="@+id/fragment_liked"
        android:name="kz.digitalart.app.ui.liked.LikedFragment"
        android:label="@string/popular"
        tools:layout="@layout/fragment_liked">

        <argument
            android:name="title"
            android:defaultValue="@string/popular" />

        <action
            android:id="@+id/action_fragment_liked_to_fragment_liked_details"
            app:destination="@id/fragment_home_details" />

    </fragment>

</navigation>