<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="32dp"
    android:paddingRight="16dp"
    android:paddingBottom="32dp">

    <LinearLayout
        android:id="@+id/ll_russian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_sheet_rounded_item"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:paddingLeft="32dp"
        android:paddingTop="16dp"
        android:paddingRight="32dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/tv_russian"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/russian"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_russian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:tint="@color/colorAccent"
            app:srcCompat="@drawable/ic_done" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_kazakh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:paddingLeft="32dp"
        android:paddingTop="16dp"
        android:paddingRight="32dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/tv_kazakh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/kazakh"
            android:textColor="@color/color_363636" />

        <ImageView
            android:id="@+id/iv_kazakh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:tint="@color/colorAccent"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_done" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_english"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:paddingLeft="32dp"
        android:paddingTop="16dp"
        android:paddingRight="32dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/tv_english"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/english"
            android:textColor="@color/color_363636" />

        <ImageView
            android:id="@+id/iv_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:tint="@color/colorAccent"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_done" />

    </LinearLayout>
</LinearLayout>